[package]
documentation = "http://gtk-rs.org/docs/gtk/"
categories = ["api-bindings", "gui"]
license = "MIT"
description = "Rust bindings for the GTK+ 3 library"
name = "gtk"
homepage = "http://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
readme = "README.md"
version = "0.7.0"
keywords = ["gtk", "gtk-rs", "gnome", "GUI"]
repository = "https://github.com/gtk-rs/gtk"
build = "build.rs"
exclude = [
    "gir-files/*",
]

[badges]
appveyor = { repository = "GuillaumeGomez/gtk", service = "github" }
travis-ci = { repository = "gtk-rs/gtk" }

[lib]
name = "gtk"

[features]
v3_16 = ["gtk-sys/v3_16", "gio/v2_44", "gdk/v3_16"]
v3_18 = ["v3_16", "gtk-sys/v3_18"]
v3_20 = ["v3_18", "gtk-sys/v3_20"]
v3_22 = ["v3_20", "gtk-sys/v3_22", "gdk/v3_22"]
v3_22_20 = ["v3_22", "gtk-sys/v3_22"]
v3_22_26 = ["v3_22_20", "gtk-sys/v3_22_26"]
v3_22_27 = ["v3_22_26", "gtk-sys/v3_22_27"]
v3_22_29 = ["v3_22_27", "gtk-sys/v3_22_29"]
v3_22_30 = ["v3_22_29", "gtk-sys/v3_22_30"]
v3_24 = ["v3_22_30", "gtk-sys/v3_24"]
v3_24_8 = ["v3_24", "gtk-sys/v3_24_8"]
purge-lgpl-docs = ["gtk-rs-lgpl-docs", "gdk/purge-lgpl-docs"]
embed-lgpl-docs = ["gtk-rs-lgpl-docs", "gdk/embed-lgpl-docs"]
dox = ["gdk/dox", "gtk-sys/dox", "futures"]
futures = ["futures-preview", "fragile", "gio/futures"]
subclassing = ["glib/subclassing", "gio/subclassing"]

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "^1.0"

[build-dependencies.gtk-rs-lgpl-docs]
version = "0.1.3"
optional = true
git = "https://github.com/gtk-rs/lgpl-docs"

[dependencies]
libc = "0.2"
bitflags = "1.0"
lazy_static = "1.0"
fragile = { version = "0.3", optional = true }
futures-preview = { version = "0.3.0-alpha", optional = true }
atk = { git = "https://github.com/gtk-rs/atk" }
cairo-sys-rs = { git = "https://github.com/gtk-rs/cairo" }
gdk-sys = { git = "https://github.com/gtk-rs/sys" }
gdk-pixbuf-sys = { git = "https://github.com/gtk-rs/sys" }
gio-sys = { git = "https://github.com/gtk-rs/sys" }
glib-sys = { git = "https://github.com/gtk-rs/sys" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }
gtk-sys = { git = "https://github.com/gtk-rs/sys" }
pango-sys = { git = "https://github.com/gtk-rs/sys" }
cairo-rs = { git = "https://github.com/gtk-rs/cairo" }
gio = { git = "https://github.com/gtk-rs/gio" }
glib = { git = "https://github.com/gtk-rs/glib" }
gdk = { git = "https://github.com/gtk-rs/gdk" }
gdk-pixbuf = { git = "https://github.com/gtk-rs/gdk-pixbuf" }
pango = { git = "https://github.com/gtk-rs/pango" }

[dev-dependencies]
gir-format-check = "^0.1"
