[package]
documentation = "http://gtk-rs.org/docs/gtk/"
categories = ["api-bindings", "gui"]
license = "MIT"
description = "Rust bindings for the GTK+ 3 library"
name = "gtk"
homepage = "http://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
readme = "README.md"
version = "0.9.1"
keywords = ["gtk", "gtk-rs", "gnome", "GUI"]
repository = "https://github.com/gtk-rs/gtk"
build = "build.rs"
exclude = [
    "gir-files/*",
]

[badges]
appveyor = { repository = "GuillaumeGomez/gtk", service = "github" }
travis-ci = { repository = "gtk-rs/gtk" }

[lib]
name = "gtk"

[features]
v3_16 = ["gtk-sys/v3_16", "gio/v2_44", "gdk/v3_16"]
v3_18 = ["v3_16", "gtk-sys/v3_18"]
v3_20 = ["v3_18", "gtk-sys/v3_20"]
v3_22 = ["v3_20", "gtk-sys/v3_22", "gdk/v3_22"]
v3_22_20 = ["v3_22", "gtk-sys/v3_22"]
v3_22_26 = ["v3_22_20", "gtk-sys/v3_22_26"]
v3_22_27 = ["v3_22_26", "gtk-sys/v3_22_27"]
v3_22_29 = ["v3_22_27", "gtk-sys/v3_22_29"]
v3_22_30 = ["v3_22_29", "gtk-sys/v3_22_30"]
v3_24 = ["v3_22_30", "gtk-sys/v3_24"]
v3_24_8 = ["v3_24", "gtk-sys/v3_24_8"]
v3_24_9 = ["v3_24_8", "gtk-sys/v3_24_9"]
purge-lgpl-docs = ["gtk-rs-lgpl-docs", "gdk/purge-lgpl-docs"]
embed-lgpl-docs = ["gtk-rs-lgpl-docs", "gdk/embed-lgpl-docs"]
dox = ["gdk/dox", "gtk-sys/dox"]

[package.metadata.docs.rs]
features = ["dox", "embed-lgpl-docs"]

[build-dependencies]
pkg-config = "0.3.7"

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "^1.0"

[build-dependencies.gtk-rs-lgpl-docs]
version = "0.1"
optional = true

[dependencies]
atk = "0.9.0"
cairo-rs = "0.9.0"
cairo-sys-rs = "0.10.0"
gobject-sys = "0.10.0"
glib-sys = "0.10.0"
glib = "0.10.0"
gio-sys = "0.10.0"
gio = "0.9.0"
gdk-sys = "0.10.0"
gdk = "0.13.0"
gdk-pixbuf-sys = "0.10.0"
gdk-pixbuf = "0.9.0"
pango = "0.9.0"
pango-sys = "0.10.0"
gtk-sys = "0.10.0"
libc = "0.2"
bitflags = "1.0"
once_cell = "1.0"

[dev-dependencies]
gir-format-check = "^0.1"
