#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
# export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:/opt/X11/lib/pkgconfig -> if xcb-shm not found

AC_PREREQ([2.69])
AC_INIT([rgtk], [0.0.1], [letang.jeremy@gmail.com])
AC_CONFIG_SRCDIR([gtk_glue/gtk_glue.c])
#AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

# Checks for libraries.
PKG_CHECK_MODULES([GTK3], [gtk+-3.0 >= 3.0.0])
PKG_CHECK_MODULES([GDK3], [gdk-3.0 >= 3.0.0])
PKG_CHECK_MODULES([GLIB], [glib-2.0 >= 2.0.0])
PKG_CHECK_MODULES([GOBJECT], [gobject-2.0 >= 2.0.0])
PKG_CHECK_MODULES([CAIRO], [cairo])


# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
