[package]
name = "rgtk-examples"
version = "0.0.1"
authors = []

[dependencies.gtk]
path = ".."

[dependencies.gdk]
git = "https://github.com/rust-gnome/gdk"

[dependencies.glib]
git = "https://github.com/rust-gnome/glib"

[dependencies.cairo]
git = "https://github.com/rust-gnome/cairo"

[features]
gtk_3_10 = ["gtk/gtk_3_10"]

[[bin]]
name = "basic"

[[bin]]
name = "cairotest"

[[bin]]
name = "gtktest"

[[bin]]
name = "sync_widgets"

[[bin]]
name = "text_viewer"

[[bin]]
name = "treeview"
