[package]
name = "glib-sys"
version = "0.1.0"
authors = ["letang.jeremy@gmail.com", "guillaume1.gomez@gmail.com", "mathijs.henquet@gmail.com", "bpgarman@fastmail.fm", "me@bstr.eu", "zsoakes@gmail.com"]
build = "build.rs"
links = "glib"

description = "FFI bindings to GLib"
repository = "https://github.com/jeremyletang/rgtk"
license = "LGPL-3.0+"

[build-dependencies]
pkg-config = "0.3"
