[package]
name = "gtk-sys"
version = "0.1.3"
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
links = "gtk"

description = "FFI bindings to GTK+ 3"
repository = "https://github.com/rust-gnome/gtk"
license = "MIT"
homepage = "https://github.com/rust-gnome/gtk"
documentation = "https://github.com/rust-gnome/gtk"

[lib]
name = "gtk_sys"

[dependencies]
atk-sys = { git = "https://github.com/rust-gnome/sys" }
bitflags = "0.3"
cairo-sys-rs = { git = "https://github.com/rust-gnome/cairo" }
gdk-pixbuf-sys = { git = "https://github.com/rust-gnome/sys" }
gdk-sys = { git = "https://github.com/rust-gnome/sys" }
gio-sys = { git = "https://github.com/rust-gnome/sys" }
glib-sys = { git = "https://github.com/rust-gnome/sys" }
gobject-sys = { git = "https://github.com/rust-gnome/sys" }
libc = "0.1"
pango-sys = { git = "https://github.com/rust-gnome/sys" }

[build-dependencies]
gcc = "=0.3.9"
pkg-config = "0.3.5"
