[package]
name = "gtk-sys"
version = "0.1.3"
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
links = "gtk"

description = "FFI bindings to GTK+ 3"
repository = "https://github.com/gtk-rs/gtk"
license = "MIT"
homepage = "https://github.com/gtk-rs/gtk"
documentation = "https://github.com/gtk-rs/gtk"

[lib]
name = "gtk_sys"

[dependencies]
atk-sys = { git = "https://github.com/gtk-rs/sys" }
bitflags = "0.3"
cairo-sys-rs = { git = "https://github.com/gtk-rs/cairo" }
gdk-pixbuf-sys = { git = "https://github.com/gtk-rs/sys" }
gdk-sys = { git = "https://github.com/gtk-rs/sys" }
gio-sys = { git = "https://github.com/gtk-rs/sys" }
glib-sys = { git = "https://github.com/gtk-rs/sys" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }
libc = "0.1"
pango-sys = { git = "https://github.com/gtk-rs/sys" }

[build-dependencies]
gcc = "~0.3.9"
pkg-config = "0.3.5"
